--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,12 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
-        <a href="{{ site.baseurl }}">
-          {{ site.title }}
-        </a>
-      </h1>
+      <center><a href="{{ site.baseurl }}"><img src="/public/logo.png"></a></center>
       <p class="lead">{{ site.description }}</p>
+      <p class="lead-cta">
+        Więcej o nas:<br>
+        <a href="https://bezpiecznykod.pl" target="_blank">bezpiecznykod.pl</a>
+      </p>
     </div>
 
     <nav class="sidebar-nav">
@@ -25,12 +25,8 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p class="sidebar-footer">&copy; {{ site.time | date: '%Y' }} <a href="https://bezpiecznykod.pl">Bezpieczny Kod</a></p>
   </div>
 </div>
