--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -56,8 +56,8 @@ html {
 .sidebar {
   text-align: center;
   padding: 2rem 1rem;
-  color: rgba(255,255,255,.5);
-  background-color: #202020;
+  color: #3c3c3c;
+  background-color: #f4f4f4;
 }
 @media (min-width: 48em) {
   .sidebar {
@@ -70,9 +70,19 @@ html {
   }
 }
 
+/* Sidebar images */
+.sidebar img {
+  height: 140px;
+  width: auto;
+}
+
 /* Sidebar links */
 .sidebar a {
-  color: #fff;
+  color: #3c3c3c;
+}
+
+.lead-cta a {
+  color: #0cc0ce;
 }
 
 /* About section */
@@ -85,6 +95,7 @@ html {
 
 /* Sidebar nav */
 .sidebar-nav {
+  text-align: center;
   margin-bottom: 1rem;
 }
 .sidebar-nav-item {
@@ -97,6 +108,12 @@ a.sidebar-nav-item:focus {
 }
 .sidebar-nav-item.active {
   font-weight: bold;
+}
+
+/* Sidebar footer */
+.sidebar-footer {
+  text-align: center;
+  font-size: 0.9rem;
 }
 
 /* Sticky sidebar
