--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -259,7 +259,14 @@ tbody tr:nth-child(odd) th {
  */
 
 .lead {
-  font-size: 1.25rem;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.lead-cta {
+  text-align: center;
+  font-size: 1.1rem;
   font-weight: 300;
 }
 
