--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -67,7 +67,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #0cc0ce;
   text-decoration: none;
 }
 a strong {
@@ -377,7 +377,7 @@ tbody tr:nth-child(odd) th {
   color: #999;
 }
 .related-posts li a:hover {
-  color: #268bd2;
+  color: #0cc0ce;
   text-decoration: none;
 }
 .related-posts li a:hover small {
