Adjust sidebar's footer

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,7 @@
       {% endfor %}
     </nav>
 
-    <p class="sidebar-footer">&copy; {{ site.time | date: '%Y' }} <a href="https://bezpiecznykod.pl">Bezpieczny Kod</a></p>
+    <p class="sidebar-footer">&copy; {{ site.time | date: '%Y' }} <a href="https://bezpiecznykod.pl" target="_blank">Bezpieczny Kod</a> &middot; <a href="https://bezpiecznykod.pl/prywatnosc.html" target="_blank">Polityka Prywatności</a>
+    </p>
   </div>
 </div>
