Add static OpenGraph

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,18 @@
       {{ page.title }} &middot; Blog.bezpiecznykod.pl
     {% endif %}
   </title>
+  <meta name="description" content="Pomagamy zapewniać bezpieczeństwo na każdym etapie cyklu wytwórczego.">
+  <meta property="og:url" content="https://blog.bezpiecznykod.pl">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="{{ site.title }} &middot; {{ site.tagline }}">
+  <meta property="og:description" content="Pomagamy zapewniać bezpieczeństwo na każdym etapie cyklu wytwórczego.">
+  <meta property="og:image" content="https://blog.bezpiecznykod.pl/public/og_logo.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="blog.bezpiecznykod.pl">
+  <meta property="twitter:url" content="https://blog.bezpiecznykod.pl">
+  <meta name="twitter:title" content="{{ site.title }} &middot; {{ site.tagline }}">
+  <meta name="twitter:description" content="Pomagamy zapewniać bezpieczeństwo na każdym etapie cyklu wytwórczego.">
+  <meta name="twitter:image" content="https://blog.bezpiecznykod.pl/public/og_logo.png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="/public/css/poole.css">
