Make OG title dynamic so it's aligned with the title
Why? Because posts should have their own unique OG title
when shared via Social Media. This is only TITLE part.
What's left to do is dynamic description part.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,23 +6,19 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title>
-    {% if page.title == "Home" %}
-      {{ site.title }} &middot; {{ site.tagline }}
-    {% else %}
-      {{ page.title }} &middot; Blog.bezpiecznykod.pl
-    {% endif %}
-  </title>
-  <meta name="description" content="Pomagamy zapewniać bezpieczeństwo na każdym etapie cyklu wytwórczego.">
+  <title>{% if page.title == 'Home' %} {{ site.title }} &middot; {{ site.tagline }} {% else %} {{ page.title }} &middot; Blog.bezpiecznykod.pl {% endif %}</title>
+  <meta name="description" content="{{ site.description }}">
+
   <meta property="og:url" content="https://blog.bezpiecznykod.pl">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="{{ site.title }} &middot; {{ site.tagline }}">
+  <meta property="og:title" content="{% if page.title == 'Home' %} {{ site.title }} &middot; {{ site.tagline }} {% else %} {{ page.title }} &middot; Blog.bezpiecznykod.pl {% endif %}">
   <meta property="og:description" content="Pomagamy zapewniać bezpieczeństwo na każdym etapie cyklu wytwórczego.">
   <meta property="og:image" content="https://blog.bezpiecznykod.pl/public/og_logo.png">
+
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="blog.bezpiecznykod.pl">
   <meta property="twitter:url" content="https://blog.bezpiecznykod.pl">
-  <meta name="twitter:title" content="{{ site.title }} &middot; {{ site.tagline }}">
+  <meta name="twitter:title" content="{% if page.title == 'Home' %} {{ site.title }} &middot; {{ site.tagline }} {% else %} {{ page.title }} &middot; Blog.bezpiecznykod.pl {% endif %}">
   <meta name="twitter:description" content="Pomagamy zapewniać bezpieczeństwo na każdym etapie cyklu wytwórczego.">
   <meta name="twitter:image" content="https://blog.bezpiecznykod.pl/public/og_logo.png">
 
