--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,19 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>{% if page.title == 'Home' %} {{ site.title }} &middot; {{ site.tagline }} {% else %}{{ page.title }} &middot; Blog.bezpiecznykod.pl {% endif %}</title>
-  <meta name="description" content="{{ site.description }}">
+  <meta name="description" content="{% if page.title == 'Home' %} {{ site.description }} {% else %}{{ page.description }} {% endif %}">
 
   <meta property="og:url" content="https://blog.bezpiecznykod.pl">
   <meta property="og:type" content="website">
   <meta property="og:title" content="{% if page.title == 'Home' %} {{ site.title }} &middot; {{ site.tagline }} {% else %}{{ page.title }} &middot; Blog.bezpiecznykod.pl {% endif %}">
-  <meta property="og:description" content="Pomagamy zapewniać bezpieczeństwo na każdym etapie cyklu wytwórczego.">
+  <meta property="og:description" content="{% if page.title == 'Home' %} {{ site.description }} {% else %}{{ page.description }} {% endif %}">
   <meta property="og:image" content="https://blog.bezpiecznykod.pl/public/og_logo.png">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="blog.bezpiecznykod.pl">
   <meta property="twitter:url" content="https://blog.bezpiecznykod.pl">
   <meta name="twitter:title" content="{% if page.title == 'Home' %} {{ site.title }} &middot; {{ site.tagline }} {% else %}{{ page.title }} &middot; Blog.bezpiecznykod.pl {% endif %}">
-  <meta name="twitter:description" content="Pomagamy zapewniać bezpieczeństwo na każdym etapie cyklu wytwórczego.">
+  <meta name="twitter:description" content="{% if page.title == 'Home' %} {{ site.description }} {% else %}{{ page.description }} {% endif %}">
   <meta name="twitter:image" content="https://blog.bezpiecznykod.pl/public/og_logo.png">
 
   <!-- CSS -->
