--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,21 +10,8 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">Strona główna</a>
-
-      {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
-
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
+      <a class="sidebar-nav-item" href="/">Strona główna</a>
+      <a class="sidebar-nav-item" href="/archive/">Archiwum</a>
     </nav>
 
     <p class="sidebar-footer">&copy; {{ site.time | date: '%Y' }} <a href="https://bezpiecznykod.pl" target="_blank">Bezpieczny Kod</a> &middot; <a href="https://bezpiecznykod.pl/prywatnosc.html" target="_blank">Polityka Prywatności</a>
