--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,9 @@
       {{ content }}
     </div>
 
+    <script src="https://unpkg.com/littlefoot/dist/littlefoot.js" type="application/javascript"></script>
+    <script type="application/javascript">
+      littlefoot.littlefoot() // Pass any littlefoot settings here.
+    </script>
   </body>
 </html>
