--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <center><a href="/"><img src="/public/logo.png"></a></center>
+      <center><a href="/"><img alt="Logo" src="/public/logo.png"></a></center>
       <p class="lead">{{ site.description }}</p>
       <p class="lead-cta">
         Więcej o nas:<br>
