--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,19 @@
 
   gtag('config', 'G-K6E2N5GL4Z');
 </script>
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '2517729408492527');
+    fbq('track', 'PageView');
+  </script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="/public/css/poole.css">
