--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,14 +22,15 @@
   <meta name="twitter:description" content="{% if page.title == 'Home' %}{{ site.description }}{% else %}{{ page.description }}{% endif %}">
   <meta name="twitter:image" content="https://blog.bezpiecznykod.pl/public/og_logo.png">
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-K6E2N5GL4Z"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-K6E2N5GL4Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-K6E2N5GL4Z');
-</script>
+    gtag('config', 'G-K6E2N5GL4Z');
+  </script>
   <!-- Facebook Pixel Code -->
   <script>
     !function(f,b,e,v,n,t,s)
