Add cookie message, same as on main page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,4 +60,32 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+      <!-- Cookie Consent Message -->
+      <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+      <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+      <script>
+      window.addEventListener("load", function(){
+      window.cookieconsent.initialise({
+          "palette": {
+          "popup": {
+              "background": "#f4f4f4",
+              "text": "#3c3c3c"
+          },
+          "button": {
+              "background": "transparent",
+              "border": "#0cc0ce",
+              "text": "#0cc0ce"
+          }
+          },
+          "theme": "classic",
+          "position": "bottom-right",
+          "content": {
+              "message": "Ta strona używa ciasteczek 🍪 dzięki czemu otrzymujesz jej najlepszą możliwą wersję.",
+              "dismiss": "OK",
+              "link": "Czytaj więcej",
+              "href": "https://bezpiecznykod.pl/polityka-prywatnosci/"
+          }
+      })});
+      </script>
 </head>
